2017.10/_sources/plugins/available/quality-filter/q-score.txt
q-score: Quality filter based on sequence quality scores.
=========================================================

.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <pre>Usage: qiime quality-filter q-score [OPTIONS]

     This method filters sequence based on quality scores and the presence of
     ambiguous base calls.

   Options:
     --i-demux PATH                 Artifact: SampleData[SequencesWithQuality]
                                    [required]
                                    The demultiplexed sequence data to
                                    be quality filtered.
     --p-min-quality INTEGER        [default: 4]
                                    The minimum acceptable PHRED
                                    score. All PHRED scores less that this value
                                    are considered to be low PHRED scores.
     --p-quality-window INTEGER     [default: 3]
                                    The maximum number of low PHRED
                                    scores that can be observed in direct
                                    succession before truncating a sequence read.
     --p-min-length-fraction FLOAT  [default: 0.75]
                                    The minimum length that a
                                    sequence read can be following truncation and
                                    still be retained. This length should be
                                    provided as a fraction of the input sequence
                                    length.
     --p-max-ambiguous INTEGER      [default: 0]
                                    The maximum number of ambiguous
                                    (i.e., N) base calls. This is applied after
                                    trimming sequences based on
                                    `min_length_fraction`.
     --o-filtered-sequences PATH    Artifact: SampleData[SequencesWithQuality]
                                    [required if not passing --output-dir]
                                    The
                                    resulting quality-filtered sequences.
     --o-filter-stats PATH          Artifact: QualityFilterStats [required if not
                                    passing --output-dir]
                                    Summary statistics of
                                    the filtering process.
     --output-dir DIRECTORY         Output unspecified results to a directory
     --cmd-config PATH              Use config file for command options
     --verbose                      Display verbose output to stdout and/or
                                    stderr during execution of this action.
                                    [default: False]
     --quiet                        Silence output if execution is successful
                                    (silence is golden).  [default: False]
     --help                         Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
         <pre>Quality filter based on sequence quality scores.

   This method filters sequence based on quality scores and the presence of
   ambiguous base calls.

   Parameters
   ----------
   demux : SampleData[SequencesWithQuality]
       The demultiplexed sequence data to be quality filtered.
   min_quality : Int, optional
       The minimum acceptable PHRED score. All PHRED scores less that this
       value are considered to be low PHRED scores.
   quality_window : Int, optional
       The maximum number of low PHRED scores that can be observed in direct
       succession before truncating a sequence read.
   min_length_fraction : Float, optional
       The minimum length that a sequence read can be following truncation and
       still be retained. This length should be provided as a fraction of the
       input sequence length.
   max_ambiguous : Int, optional
       The maximum number of ambiguous (i.e., N) base calls. This is applied
       after trimming sequences based on `min_length_fraction`.

   Returns
   -------
   filtered_sequences : SampleData[SequencesWithQuality]
       The resulting quality-filtered sequences.
   filter_stats : QualityFilterStats
       Summary statistics of the filtering process.</pre>
       </div>
     </div>
   </div>